--- a/template_files/k64_files/k64_cross_properties.cfg
+++ b/template_files/k64_files/k64_cross_properties.cfg
@@ -14,6 +14,10 @@ endian = 'little'
 system = 'baremetal'
 [properties]
 needs_exe_wrapper = true
-c_args = ['-nostdlib', '-mcpu=cortex-m4',
-          '-mfloat-abi=hard', '-mfpu=fpv4-sp-d16']
-c_link_args = ['-T', '{PYINIT_CONFIG_PROJECT_ROOT}/k64.ld', '-nostdlib']
+# If you are including Newlib from a package manager, remove the floating-point
+# arguments and replace them with: -mfloat-abi=soft
+c_args = ['-mcpu=cortex-m4', '-mfloat-abi=hard', '-mfpu=fpv4-sp-d16']
+# True baremetal: -nostdlib
+# Baremetal with crt0.S: -nodefaultlibs
+# If using Newlib, add --specs=nano.specs --specs=nosys.specs
+c_link_args = ['-T', '{PYINIT_CONFIG_PROJECT_ROOT}/k64.ld', '-nostdlib', '-mcpu=cortex-m4', '-mfpu=fpv4-sp-d16']
